[gd_scene load_steps=4 format=2]

[ext_resource path="res://Objects/Interface/Counter/CurrencyCounter.tscn" type="PackedScene" id=1]
[ext_resource path="res://Objects/Interface/ControllableViewport/ControllableViewport.tscn" type="PackedScene" id=2]
[ext_resource path="res://Objects/Interface/ViewportAndOverlay/ViewportAndOverlay.gd" type="Script" id=3]





[node name="ViewportAndOverlay" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControllableViewport" parent="." instance=ExtResource( 2 )]
process_priority = 1

[node name="Overlay" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Overlay"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 64.0
margin_top = 64.0
margin_right = -64.0
margin_bottom = -64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Overlay/MarginContainer"]
margin_right = 896.0
margin_bottom = 472.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenteredOverlay" type="Control" parent="Overlay/MarginContainer/CenterContainer"]
margin_left = 448.0
margin_top = 236.0
margin_right = 448.0
margin_bottom = 236.0

[node name="RightGridContainer" type="VBoxContainer" parent="Overlay"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -136.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrencyCounter" parent="Overlay/RightGridContainer" instance=ExtResource( 1 )]
margin_top = 268.0
margin_bottom = 300.0

[node name="LeftGridContainer" type="VBoxContainer" parent="Overlay"]
anchor_top = 0.853
anchor_bottom = 1.0
margin_top = 0.199982
margin_right = 320.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="world_space_ready" from="ControllableViewport" to="." method="_on_ControllableViewport_world_space_ready"]
